feat(client): add loading screen component feat(client): add loading screen while waiting for tasks fix(client): fix hover style staying on after click on mobile fix(client): fix log in page overflow on small screens fix(client): fix home page overflow on small screens fix(client): fix task list overflow on small screens fix(client): fix text moving when collapsing sections on new task change(client): change all requests to have proper url style: add Huge-Gap to Stack-Container styling style: make scrollbar bigger on mobile style: add spacing between settings sections style: add space over first settings section feat(client): made sidebar animate on first render change(client): change task animations change(client): change chip from div to button fix(client): click not registering on mobile for current progress number feat(client): Add loading screen to modal

--- a/client/src/components/bars/NavBar/NavBar.module.scss
+++ b/client/src/components/bars/NavBar/NavBar.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     padding: v.$base-padding;
+    padding-bottom: 0;
     justify-content: space-around;
     border-top: v.$base-border;
     z-index: 3;
