--- a/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
@@ -7,7 +7,7 @@
 
 .bigContainer {
   display: grid;
-  grid-template: 1fr / 1 fr;
+  grid-template: 100% / 100%;
   overflow: hidden;
   width: 100%;
   justify-content: center;
