--- a/client/src/components/containers/HeaderExtendContainer/HeaderExtendContainer.module.scss
+++ b/client/src/components/containers/HeaderExtendContainer/HeaderExtendContainer.module.scss
@@ -14,6 +14,7 @@
   text-align: left;
   padding: 0 0 12px;
   transition: opacity 0.2s linear;
+  overflow: hidden;
 
   &.disabled {
     opacity: 0.38;
