--- a/client/src/pages/ListView/ListView.module.scss
+++ b/client/src/pages/ListView/ListView.module.scss
@@ -10,6 +10,8 @@
 
 .leftSide {
   height: 100%;
+  width: 22.15em;
+  max-width: 100%;
 }
 
 .rightSide {
@@ -32,7 +34,7 @@
   }
   .container {
     overflow-y: hidden;
-    padding-top: 5em;
+    //padding-top: 5em;
     box-sizing: border-box;
   }
 }
