fix: button hover animation triggers when disabled feat: add offline badge

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -50,7 +50,7 @@
     }
 
     @media (hover: hover) and (pointer: fine) {
-        &:hover:not(.disabled) {
+        &:not(.disabled) {
             transform: translateY(-1px);
             box-shadow: v.$elevation-1;
         }
