fix: active animation still runs when button is disabled fix: dropdown hover didn't work fix: dropdown didn't work for time period 1 in new category feat: start work on getting new category ready

--- a/client/src/components/buttons/Button/Button.module.scss
+++ b/client/src/components/buttons/Button/Button.module.scss
@@ -44,19 +44,13 @@
         border-color: var(--error-color);
     }
 
-    &:active:not(.disabled) {
-        transform: translateY(1px);
+    &:hover:not(:disabled) {
+        transform: translateY(-1px);
         box-shadow: v.$elevation-1;
     }
 
-    @media (hover: hover) and (pointer: fine) {
-        &:not(.disabled) {
-            transform: translateY(-1px);
-            box-shadow: v.$elevation-1;
-        }
-
-        &:active:not(.disabled) {
-            transform: translateY(1px);
-        }
+    &:active:not(:disabled) {
+        transform: translateY(1px);
+        box-shadow: v.$elevation-1;
     }
 }
