--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -80,6 +80,14 @@
 
     & > * {
         padding: v.$base-padding;
+        width: 100%;
+        text-align: left;
+        font-size: inherit;
+
+        text-overflow: ellipsis;
+        overflow-x: hidden;
+        white-space: nowrap;
+
         &:hover {
             &::after {
                 content: '';
@@ -93,6 +101,21 @@
                 border-radius: 8px;
                 pointer-events: none;
             }
+        }
+    }
+
+    &.optionSelected {
+        &::after {
+            content: '';
+            background-color: var(--on-surface-color);
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            opacity: 0.05;
+            border-radius: 8px;
+            pointer-events: none;
         }
     }
 }
