fix: TimeInput container has wrong set height fix: dropdown has error on resize when extended fix: goal type and limit are mixed when reseting group in new category fix: TextBoxInput can't be empty with min number set feat: add priority indicator to new category fix(server): new groups not working fix: dropdown has scroll bar when it shouldn't

--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -69,7 +69,6 @@
 }
 
 .optionsContainer {
-    box-sizing: border-box;
     position: absolute;
     gap: 5px;
     transform-origin: bottom;
@@ -80,7 +79,7 @@
     padding: v.$symmetrical-padding !important;
     box-shadow: v.$elevation-1;
 
-    max-height: 10em;
+    max-height: calc(6em + 10px); // 3 options
     flex-flow: wrap;
     overflow-y: auto;
     height: auto;
@@ -109,6 +108,7 @@
     box-sizing: border-box;
     height: 2em;
     width: 100%;
+    flex-shrink: 0;
 
     & > * {
         padding: v.$base-padding;
