style: update table styles

--- a/client/src/pages/TaskView/Taskview.module.scss
+++ b/client/src/pages/TaskView/Taskview.module.scss
@@ -25,7 +25,7 @@ $base-size: 1.2em;
 
 .tableButton {
   display: flex;
-  font-weight: bold;
+  //font-weight: bold;
   align-items: center;
   font-size: v.$font-m;
   gap: 6px;
