fix: category view key issue feat: enable task editing style: change how groups are listed in category view and new category

--- a/client/src/pages/CategoryView/CategoryView.module.scss
+++ b/client/src/pages/CategoryView/CategoryView.module.scss
@@ -1,5 +1,13 @@
+@use "@/styles/index";
+
 .dot {
   width: 0.5em;
   height: 0.5em;
   border-radius: 0.5em;
+}
+
+.groupsContainer {
+  @extend .Horizontal-Flex-Container;
+  padding-bottom: 4px;
+  overflow-x: auto;
 }
