--- a/client/src/components/utilities/Alert/Alert.module.scss
+++ b/client/src/components/utilities/Alert/Alert.module.scss
@@ -27,24 +27,48 @@
 
 .iconContainer {
     display: inline-flex;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
 }
 
 .typeIndicator {
     width: 1em;
-    &.error {
-        background-color: var(--error-color);
-    }
 
-    &.warning {
-        background-color: var(--warning-color);
-    }
+}
 
-    &.success {
-        background-color: var(--success-color);
-    }
+.error {
+    background-color: var(--error-color);
+}
 
-    &.info {
-        background-color: var(--info-color);
+.warning {
+    background-color: var(--warning-color);
+}
+
+.success {
+    background-color: var(--success-color);
+}
+
+.info {
+    background-color: var(--info-color);
+}
+
+.timerContainer {
+    width: 100%;
+    background-color: var(--border-primary-color);
+    border-radius: 8px;
+}
+
+@keyframes expandTimer {
+    from {width: 0}
+    to {width: 100%}
+}
+
+.timerIndicator {
+    width: 100%;
+    height: 2px;
+    animation: expandTimer 2.4s linear;
+
+    &.paused {
+        animation-play-state: paused;
+        background-color: var(--primary-color);
     }
 }
