--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -76,7 +76,7 @@
     
     z-index: 1;
     margin-top: 5px;
-    padding: v.$symmetrical-padding !important;
+    padding: 6px !important;
     box-shadow: v.$elevation-1;
 
     max-height: calc(6em + 10px); // 3 options
@@ -86,6 +86,9 @@
 
     animation: 0.2s expandOptionsContainer ease-in-out;
     transition: 0.2s transform ease-in-out;
+
+    border: 4px solid var(--surface-color) !important;
+    outline: v.$base-border;
 
     &.collapsed {
         transform: scaleY(0);
