--- a/client/src/components/utilities/Alert/Alert.module.scss
+++ b/client/src/components/utilities/Alert/Alert.module.scss
@@ -20,7 +20,7 @@
     @extend .Stack-Container;
     padding: v.$base-padding;
     flex-grow: 1;
-    & > :last-child {
+    & > :nth-child(2) {
         opacity: 0.6;
     }
 }
