fix: category starting date is wrong type feat: add full duration calculation to category view fix: category starting dates are not correct fix: new task group selector is enabled when it shouldn't be

--- a/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
+++ b/client/src/components/indicators/CategoryIndicator/CategoryIndicator.module.scss
@@ -2,7 +2,7 @@
 @use '@/styles/mixins' as m;
 
 .container {
-  border-radius: v.$base-border-radius;
+  border-radius: v.$button-border-radius;
   padding: 4px 7px;
   font-size: v.$font-s;
   align-items: center;
