--- a/client/src/components/utilities/Table/Table.module.scss
+++ b/client/src/components/utilities/Table/Table.module.scss
@@ -18,10 +18,13 @@
   height: auto;
   tr {
     td {
-      width: 45%;
-    }
-    &:last-of-type(td) {
-      width: 10%;
+      width: 40%;
+      &:last-child:not(:nth-child(2)) {
+        width: 10%;
+      }
+      &:first-child {
+        width: 50%;
+      }
     }
   }
 }
