fix: Selected date is not full width on calendar picker when its one digit fix: Proper entries are not properly highlighted in task view

--- a/client/src/pages/TaskView/Taskview.module.scss
+++ b/client/src/pages/TaskView/Taskview.module.scss
@@ -32,6 +32,7 @@ $base-size: 1.2em;
   opacity: 0.87;
   border-radius: 500px;
   border: 6px solid transparent;
+  width: 2em;
 
   &:hover:not(.customSelectedDay) {
     background-color: var(--border-primary-color) !important;
