style: remove shadow from rounded containers style: change animation for tasks, categories etc style: change settings width on desktop style: add light box shadow to Rounded-Container

--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -14,7 +14,7 @@
 
 @media (min-width: v.$tablet-breakpoint) {
     .container {
-        width: 600px;
+        min-width: 600px;
         height: calc(100% - 4em);
         padding: 20px !important;
         padding-right: 12px !important;
