style: make checkbox icon bigger feat: change the tabs in list view

--- a/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
+++ b/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
@@ -116,3 +116,7 @@ circle {
     // We added this in order for the scss class to not be undefined, because it's used for animations
     opacity: 1;
 }
+
+.checkBoxContainer {
+    font-size: 1.5em;
+}
