--- a/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
@@ -8,7 +8,8 @@
 .bigContainer {
   display: grid;
   grid-template: 100% / 100%;
-  overflow: hidden;
+  //overflow: hidden;
+  overflow-x: visible;
   width: 100%;
   justify-content: center;
 
