fix(client): when server or user is offline log in loads infinitely feat(client): add inline loading dots feat(client): change log in loading to be dots

--- a/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
+++ b/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
@@ -7,7 +7,6 @@
   justify-content: center;
   align-items: center;
 
-
   &.fullSize {
     height: 100%;
     width: 100%;
@@ -20,6 +19,9 @@
     padding: 0 !important;
     border-radius: 2em !important;
     box-shadow: none;
+    font-size: inherit;
+
+    background-color: transparent;
   }
 }
 
@@ -58,4 +60,41 @@
     animation: rotating 0.75s linear infinite;
     transform-origin: bottom right;
   }
+}
+
+@keyframes pulseSize {
+  0% {transform: scale(0.3)}
+  33% {transform: scale(0.6)}
+  66% {transform: scale(0.3)}
+  100% {transform: scale(0.3)}
+}
+
+.dotsIndicator {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+
+  .dots {
+    height: 1.23333em;
+    width: 1.23333em;
+    border-radius: 1.23333em;
+    transform: scale(0.3);
+
+    background-color: var(--on-primary-color);
+
+
+    &:first-child {
+      animation: pulseSize 1.5s linear infinite;
+    }
+
+    &:nth-child(2) {
+      animation: pulseSize 1.5s linear infinite 0.3s;
+    }
+
+    &:last-child {
+      animation: pulseSize 1.5s linear infinite 0.6s;
+    }
+  }
+
 }
