--- a/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
+++ b/client/src/components/indicators/LoadingIndicator/LoadingIndicator.module.scss
@@ -1,3 +1,5 @@
+@use "@/styles/index";
+
 .container {
   width: calc(22.15em - 20px);
   padding: 20px !important;
@@ -7,7 +9,12 @@
   justify-content: center;
   align-items: center;
 
-  &.fullSize {
+  &.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+
     height: 100%;
     width: 100%;
   }
@@ -18,10 +25,40 @@
     border: none;
     padding: 0 !important;
     border-radius: 2em !important;
-    box-shadow: none;
+    box-shadow: none !important;
     font-size: inherit;
 
     background-color: transparent;
+  }
+
+  --loading-color: var(--primary-color);
+  --loading-background-color: var(--background-color);
+  --loading-secondary-color: var(--surface-color);
+
+  &.inverted {
+    background-color: var(--primary-color);
+
+    --loading-color: var(--on-primary-color);
+    --loading-background-color: var(--primary-color);
+    --loading-secondary-color: var(--primary-color);
+  }
+
+  &.large {
+    font-size: 2em;
+
+    &:not(.fullscreen) {
+      width: calc(11.075em - 20px);
+      height: 1em;
+    }
+  }
+
+  &.small {
+    font-size: 0.5em;
+
+    &:not(.fullscreen) {
+      width: calc(44.3em - 20px);
+      height: 4em;
+    }
   }
 }
 
@@ -35,13 +72,13 @@
   height: 2em;
   width: 2em;
   border-radius: 2em;
-  background-color: var(--background-color);
+  background-color: var(--loading-background-color);
   overflow: hidden;
 
   &::after {
     content: '';
     position: absolute;
-    background-color: var(--surface-color);
+    background-color: var(--loading-secondary-color);
     top: 0.25em;
     left: 0.25em;
     height: 1.5em;
@@ -52,7 +89,7 @@
   &::before {
     content: '';
     position: absolute;
-    background-color: var(--primary-color);
+    background-color: var(--loading-color);
     top: 0;
     left: 0;
     height: 1em;
@@ -81,8 +118,7 @@
     border-radius: 1.23333em;
     transform: scale(0.3);
 
-    background-color: var(--on-primary-color);
-
+    background-color: var(--loading-color);
 
     &:first-child {
       animation: pulseSize 1.5s linear infinite;
