feat: add keybinds to settings page style: make task stagger faster

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -108,6 +108,10 @@ a {
         column-gap: v.$big-gap;
         row-gap: v.$base-gap;
     }
+
+    &.Small-Gap {
+        gap: v.$small-gap;
+    }
 }
 
 .Stack-Container {
