--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -64,6 +64,7 @@ $symmetrical-padding: 10px;
 $big-padding: 40px 80px;
 $base-margin: 0.75rem;
 
+$small-gap: 5px;
 $base-gap: 10px;
 $big-gap: 20px;
 $huge-gap: 30px;
