--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -112,3 +112,21 @@
 .firstSection {
     padding-top: 20px;
 }
+
+.keyBindsContainer {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-auto-rows: auto;
+    row-gap: 10px;
+    align-items: center;
+
+    & .emptyChip {
+        padding: 6px 12px;
+        border: v.$base-border;
+        border-radius: v.$base-border-radius;
+        font-weight: 400;
+        flex-grow: 0;
+        width: min-content;
+        justify-self: flex-end;
+    }
+}
