style: sync home and listview styling feat: add ctrl + \ to create new category feat: make scrollbar smaller

--- a/client/src/pages/Settings/Settings.module.scss
+++ b/client/src/pages/Settings/Settings.module.scss
@@ -130,3 +130,8 @@
         justify-self: flex-end;
     }
 }
+
+.keyBindsComboContainer {
+    @extend .Horizontal-Flex-Container, .Small-Gap;
+    justify-self: flex-end;
+}
