--- a/client/src/pages/ListView/ListView.module.scss
+++ b/client/src/pages/ListView/ListView.module.scss
@@ -1,4 +1,5 @@
 @use "@/styles/variables" as v;
+@use "@/styles/index";
 
 $selection-height: 3.5em;
 
@@ -11,46 +12,61 @@ $selection-height: 3.5em;
 
   & > * {
     height: 100%;
-    overflow: auto;
-    padding-right: 1em;
   }
 }
 
-.leftSide {
+.rightSide {
+  overflow: auto;
+  width: 22.15em;
+  min-width: 22.15em;
   max-width: 100%;
-}
+  padding: 0 10px;
 
-@media (min-width: v.$tablet-breakpoint) {
-  .container {
-    & > * {
-      padding-left: 4px;
-    }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--background-color);
   }
-  .leftSide {
-    width: 23.15em
-  }
-  .rightSide {
-    width: 25.15em;
-    flex-grow: 1;
+
+  &:hover::-webkit-scrollbar-thumb {
+    background-color: var(--border-primary-color);
   }
 }
 
-@media (max-width: v.$tablet-breakpoint) {
-  .leftSide, .rightSide {
-    width: 100%;
-    box-sizing: border-box;
-  }
-  .container {
-    overflow-y: hidden;
-    //padding-top: 5em;
-    box-sizing: border-box;
-  }
+.newCategoryButton {
+  @extend .Empty-Indicator-Container, .Clickable;
+
+  flex-shrink: 0;
+  width: 100%;
+  box-sizing: border-box;
+  height: calc(2em + 20px);
 }
+
+//@media (min-width: v.$tablet-breakpoint) {
+//  .leftSide {
+//    width: 23.15em
+//  }
+//  .rightSide {
+//    width: 25.15em;
+//    flex-grow: 1;
+//  }
+//}
+//
+//@media (max-width: v.$tablet-breakpoint) {
+//  .leftSide, .rightSide {
+//    width: 100%;
+//    box-sizing: border-box;
+//  }
+//  .container {
+//    overflow-y: hidden;
+//    //padding-top: 5em;
+//    box-sizing: border-box;
+//  }
+//}
 
 .categoryContainer {
-  width: calc(22.15em - 20px);
+  width: 100%;
   padding: 20px;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .categoryCircle {
