--- a/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
@@ -9,6 +9,7 @@
   display: grid;
   grid-template: 100% / 100%;
   //overflow: hidden;
+  max-height: 100%;
   overflow-x: visible;
   width: 100%;
   justify-content: center;
