--- a/client/src/pages/ListView/ListView.module.scss
+++ b/client/src/pages/ListView/ListView.module.scss
@@ -9,6 +9,7 @@ $selection-height: 3.5em;
   gap: 4em;
   position: relative;
   align-items: flex-start;
+  overflow: hidden;
 
   & > * {
     height: 100%;
@@ -50,17 +51,29 @@ $selection-height: 3.5em;
 //  }
 //}
 //
-//@media (max-width: v.$tablet-breakpoint) {
-//  .leftSide, .rightSide {
-//    width: 100%;
-//    box-sizing: border-box;
-//  }
-//  .container {
-//    overflow-y: hidden;
-//    //padding-top: 5em;
-//    box-sizing: border-box;
-//  }
-//}
+
+.smallScreenList {
+  height: 100%;
+  box-sizing: border-box;
+
+  & > div {
+    padding: calc($selection-height - 4px - 0.5em) 4px 10px 4px;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+  }
+}
+@media (max-width: v.$tablet-breakpoint) {
+  .rightSide {
+    width: 100%;
+    height: 100%;
+  }
+  .container {
+    overflow-y: hidden;
+    //padding-top: 5em;
+    box-sizing: border-box;
+  }
+}
 
 .categoryContainer {
   width: 100%;
@@ -152,7 +165,6 @@ $selection-height: 3.5em;
   width: 100%;
   box-sizing: border-box;
 
-  padding: calc($selection-height - 10px - 0.5em) 4px 10px 4px;
   position: absolute;
   top: 4px;
 
