--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -18,7 +18,7 @@
   }
 }
 
-@media (max-width: v.$tablet-breakpoint) {
+@media (max-width: v.$phone-breakpoint) {
   .leftSide {
     width: 100%;
     padding: 1em 4px 0 4px;
