--- a/client/src/components/containers/Modal/Modal.module.scss
+++ b/client/src/components/containers/Modal/Modal.module.scss
@@ -1,6 +1,6 @@
 @use "@/styles/variables" as v;
 
-@media (min-width: v.$tablet-breakpoint) {
+@media (min-width: v.$phone-breakpoint) {
   .container {
     background-color: var(--background-color);
     &.transparent {
@@ -17,7 +17,7 @@
   }
 }
 
-@media (max-width: v.$tablet-breakpoint) {
+@media (max-width: v.$phone-breakpoint) {
   .container {
     background-color: var(--surface-color);
   }
