--- a/client/src/components/utilities/OfflineBadge/OfflineBadge.module.scss
+++ b/client/src/components/utilities/OfflineBadge/OfflineBadge.module.scss
@@ -1,12 +1,12 @@
 @use "@/styles/variables" as v;
 
-@media (min-width: v.$tablet-breakpoint) {
+@media (min-width: v.$phone-breakpoint) {
   .container {
     bottom: 1em;
   }
 }
 
-@media (max-width: v.$tablet-breakpoint) {
+@media (max-width: v.$phone-breakpoint) {
   .container {
     bottom: 3.5em;
     right: 0.5em;
