--- a/client/src/pages/ListView/ListView.module.scss
+++ b/client/src/pages/ListView/ListView.module.scss
@@ -41,7 +41,7 @@ $selection-height: 3.5em;
   height: calc(2em + 20px);
 }
 
-//@media (min-width: v.$tablet-breakpoint) {
+//@media (min-width: v.$phone-breakpoint) {
 //  .leftSide {
 //    width: 23.15em
 //  }
@@ -63,7 +63,8 @@ $selection-height: 3.5em;
     width: 100%;
   }
 }
-@media (max-width: v.$tablet-breakpoint) {
+
+@media (max-width: v.$phone-breakpoint) {
   .rightSide {
     width: 100%;
     height: 100%;
@@ -169,4 +170,34 @@ $selection-height: 3.5em;
   top: 4px;
 
   height: calc(100% - 8px);
+}
+
+@media (min-width: v.$phone-breakpoint) and (max-width: v.$desktop-breakpoint) {
+  .selectionBarContainer {
+    left: calc(3em + 60px)
+  }
+  .selectionBar {
+    justify-content: flex-start;
+
+    &::before {
+      left: 0.25em;
+      transform: none;
+    }
+
+    &.selection1 {
+      &::before {
+        transform: translateX(6.75em);
+      }
+    }
+  }
+
+  .smallScreenContainer {
+    width: 22.15em;
+    min-width: 22.15em;
+    padding: 0 10px;
+  }
+
+  .smallScreenList > div {
+    padding: calc($selection-height - 4px - 0.5em) 4px 10px 0;
+  }
 }
